# numerical-modeling-final

./: .gitignore  CMakeLists.txt  README.md  build.sh  lorenzplot.gnu
inc/: lorenz_ensemble.hpp  lorenz_solver.hpp
src/: lorenz_ensemble.cpp  lorenz_solver.cpp  main.cpp
